--- a/client/imports/pages/chats/new-chat.html
+++ b/client/imports/pages/chats/new-chat.html
@@ -22,3 +22,11 @@
     </ion-buttons>
   </ion-list>
 </ion-header>
+
+<ion-content class="new-chat">
+  <ion-list class="users">
+    <button ion-item *ngFor="let user of users | async" class="user" (click)="addChat(user)">
+      <img class="user-picture" [src]="getPic(user.profile.pictureId)">
+      <h2 class="user-name">{{user.profile.name}}</h2>
+    </button>
+  </ion-list>
